# aggregator_api

./: .dockerignore  .env.example  Dockerfile  Dockerfile.grpc  README.md  docker-compose.yml  prometheus.yml  pyproject.toml  run.sh
.github/workflows/: deploy.yml
alembic/: env.py
alembic/versions/: 1b3204d9a869_add_outbox_table.py  9efec3c6b831_add_idempotency_table.py  a14b7ef28df8_add_idempotency_table.py
src/: dependencies.py  main.py
src/api/v1/: events.py  health.py  metrics.py  sync.py  tickets.py
src/cache/: base.py  lru_cache.py  memory_cache.py  redis_cache.py
src/clients/: base.py  events_provider.py  metrics_transport.py
src/configs/: config.py
src/database/: __init__.py  database.py
src/grpc_service/: server.py
src/grpc_service/protos/: kvstore_pb2_grpc.py
src/grpc_service/servicers/: cache_servicer.py
src/logger/: config.py
src/middleware/: metrics.py  metrics_definitions.py
src/models/: __init__.py  event.py  idempotency.py  outbox.py  place.py  sync_meta.py  ticket.py
src/notification/: base.py  capashino_client.py
src/repositories/: event_repository.py  idempotency_repository.py  outbox_repository.py  sync_meta_repository.py  ticket_repository.py
src/schemas/: capashino.py  event.py  outbox.py  sync.py  ticket.py
src/use_cases/: events_use_cases.py  sync_use_cases.py  tickets_use_cases.py
src/workers/: outbox_worker.py
tests/: fakes.py  test_events_use_cases.py  test_health.py  test_sync_use_cases.py  test_tickets_use_cases.py
