[project]
name = "aggregator"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.135.1",
    "uvicorn>=0.41.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "asyncpg>=0.30.0",
    "alembic>=1.14.0",
    "pydantic-settings>=2.7.0",
    "httpx>=0.28.1",
    "email-validator>=2.0.0",
    "redis[asyncio]>=5.0.0",
    "prometheus-client>=0.24.1",
    "grpcio>=1.78.0",
    "grpcio-tools>=1.78.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]

[tool.ruff.lint]
extend-select = ["I"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "ruff>=0.15.4",
]
